# release-bot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.app  Dockerfile.dev  Dockerfile.githubapp  Dockerfile.test  Jenkinsfile  Makefile  README.md  bot.py  conf.yaml  openshift-template-dev.yml  openshift-template.yml  release-conf-example.yaml  release-conf.yaml  release_bot.py  requirements.txt  setup.cfg  setup.py
files/: gitconfig  install-rpm-packages.yaml  passwd  recipe.yaml  run.sh
gitchangelog/: .gitchangelog.rc  markdown.tpl
hack/: clean-testing-github-repos
logo_design/: release-bot.sketch
release_bot/: __init__.py  __main__.py  celerizer.py  celery_task.py  cli.py  configuration.py  debug.txt  exceptions.py  fedora.py  git.py  github.py  init_repo.py  new_pr.py  new_release.py  pypi.py  release_bot.py  releasebot.py  utils.py  webhooks.py
tests/: conftest.py  github_utils.py  requirements.txt  test_bot.py  test_changelog.py  test_fedora.py  test_github.py  test_load_local_conf.py  test_load_release_conf.py  test_pypi.py  test_pypi_2.py  test_pypi_3.py  test_specfile.py  test_utils.py  test_webhooks.py
tests/src/: conf_with_clone_url.yaml  conf_with_gitchangelog.yaml  different-pypi-name.yaml  example.spec  example_setup.py.txt  example_updated.spec  example_updated_changelog.spec  missing_author.yaml  missing_items_conf.yaml  release-conf.yaml  sample_conf.yaml  test-setup.cfg
tests/src/release_bot_test/: release_bot_test.py.txt
tests/src/rlsbot-test/: rlsbot_test.py  setup.py
tests/src/rlsbot_test/: rlsbot_test.py  setup.py
tests/unit/: test_github.py
