[bdist_wheel]
universal = 1

[metadata]
name = release-bot
url = https://github.com/user-cont/release-bot
description = Automated releasing from GitHub repositories.
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = GPLv3+
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Software Development

[options]
python_requires = >=3.6

[options.entry_points]
console_scripts =
    release-bot=release_bot.releasebot:main
