[metadata]
name = release-bot
version = attr: release_bot.version.__version__
url = https://github.com/user-cont/release-bot
description = Automated releasing from GitHub repositories.
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = GPLv3+
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Software Development
keywords =
    git
    github
    release
    PyPI
    packaging

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    release-bot=release_bot.releasebot:main
