
[metadata]
name = release-bot
version = attr: release_bot.version.__version__
url = https://github.com/user-cont/release-bot/
description = Automated releasing from GitHub repositories.
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Utilities
keywords =
    git
    packaging
    fedora
    rpm
    dist-git


[options]
packages = find:
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    PyYAML
    requests
    semantic_version
    twine
    wheel
    PyJWT
    flask
    gitchangelog
    pystache
    celery[redis]
    cryptography
    ogr==0.8.0

[options.packages.find]
exclude =
    tests*

[options.extras_require]
tests =
    flexmock
    pytest
    pytest-timeout

[options.entry_points]
console_scripts =
    release-bot=release_bot.releasebot:main
